--- a/static/css/main.css
+++ b/static/css/main.css
@@ -43,6 +43,7 @@ h2 {
 
 .Composer-flexible {
         background-color: #fff;
+        padding: 0；
 }
 .Composer-flexible:focus {
         border-color: transparent;
