--- a/templates/index.html
+++ b/templates/index.html
@@ -325,7 +325,7 @@ $(document).ready(function() {
 
         
 
-        var modal = '<div class="Modal modal-dialog TagDiscussionModal"><div class="Modal-content"><div class="Modal-close App-backControl"><button class="Button Button--icon Button--link hasIcon" type="button"><i class="icon fa fa-fw fa-times Button-icon"></i></button></div><form><div class="Modal-header"><h3 class="App-titleControl App-titleControl--text">选择帖子版块</h3></div><div class="Modal-alert"></div><div class="Modal-body"><div class="TagDiscussionModal-form"><div class="TagDiscussionModal-form-input"><div class="TagsInput FormControl "><span class="TagsInput-selected"></span><input class="FormControl" placeholder="选择合适的版块（必选）"></div></div><div class="TagDiscussionModal-form-submit App-primaryControl"><button type="submit" class="Button Button--primary hasIcon disabled" disabled="" title="确定"><i class="icon fa fa-fw fa-check Button-icon"></i><span class="Button-label">确定</span></button></div></div></div><div class="Modal-footer"><ul class="TagDiscussionModal-list SelectTagList">'+tagListHtml+'</ul></div></form></div></div>';
+        var modal = '<div class="Modal modal-dialog TagDiscussionModal"><div class="Modal-content"><div class="Modal-close App-backControl"><button class="Button Button--icon Button--link hasIcon" type="button"><i class="icon fa fa-fw fa-times Button-icon"></i></button></div><div><div class="Modal-header"><h3 class="App-titleControl App-titleControl--text">选择帖子版块</h3></div><div class="Modal-alert"></div><div class="Modal-body"><div class="TagDiscussionModal-form"><div class="TagDiscussionModal-form-input"><div class="TagsInput FormControl "><span class="TagsInput-selected"></span><input class="FormControl" placeholder="选择合适的版块（必选）"></div></div><div class="TagDiscussionModal-form-submit App-primaryControl"><button  class="Button Button--primary hasIcon disabled" disabled="" title="确定"><i class="icon fa fa-fw fa-check Button-icon"></i><span class="Button-label">确定</span></button></div></div></div><div class="Modal-footer"><ul class="TagDiscussionModal-list SelectTagList">'+tagListHtml+'</ul></div></div></div></div>';
         $('.ModalManager').html(modal);
         $('.modal').modal('show');
     });
@@ -380,7 +380,17 @@ $(document).ready(function() {
     $(document).on('click', '.SelectTagListItem-description .TagLabel', function() {
       var tagHtml = '<span class="TagsInput-tag">'+$(this).prop("outerHTML")+'</span>';
       $('.TagsInput-selected').html(tagHtml);
+      $('.TagDiscussionModal-form-submit button').removeClass('disabled');
+      $('.TagDiscussionModal-form-submit button').attr('disabled',false); 
     });
+
+    $(document).on('click', '.TagDiscussionModal-form-submit', function() {
+      var tagHtml = '<span class="TagsLabel "><span class="TagLabel  colored" style="color: rgb(239, 86, 79); background-color: rgb(239, 86, 79);"><span class="TagLabel-text">版块</span></span>'+$('.TagsInput-selected .TagsInput-tag').html()+'</span>';
+      $('.DiscussionComposer-changeTags').html(tagHtml);
+      $('.modal').modal('hide');
+    });
+
+    
 
     
 });
