--- a/templates/post.html
+++ b/templates/post.html
@@ -74,7 +74,7 @@
                       <span class="TagsLabel ">
                         <a class="TagLabel  colored" title="基于 Flarum 轻论坛的中文增强发行版，集成了一些比较实用的插件，使其更符合国内场景" href="/t/flarumone" style="color: rgb(239, 86, 79); background-color: rgb(239, 86, 79);">
                           <span class="TagLabel-text">版块</span>
-                        </a><a class="TagLabel" title="" href="/t/help"><span class="TagLabel-text">大神经验分享</span></a>
+                        </a><a class="TagLabel" title="" href="/tag/{{post.board}}"><span class="TagLabel-text">{{post.board}}</span></a>
                       </span>
                       <span class="TagsLabel ">
                         <a class="TagLabel  colored" title="" href="/t/fix" style="color: rgb(155, 193, 102); background-color: rgb(155, 193, 102);">
