--- a/templates/index.html
+++ b/templates/index.html
@@ -182,12 +182,12 @@
                   <li class="item-title">
                     <h3>Start a Discussion</h3>
                   </li>
-                  <li class="item-tags">
+                  <li class="item-tags board">
                     <a class="DiscussionComposer-changeTags">
                       <span class="TagLabel untagged">选择版块</span>
                     </a>
                   </li>
-                  <li class="item-tags">
+                  <li class="item-tags model">
                     <a class="DiscussionComposer-changeTags">
                       <span class="TagLabel untagged">选择车型</span>
                     </a>
@@ -280,7 +280,7 @@ function showPosts(data) {
             avatar_text = '<span class="Avatar" style="background: rgb(208, 160, 229); text-transform: capitalize;">' + post.author_username.substring(0, 1) + '</span>';
           }       
 
-          var post_text = '<li data-id="'+post.id+'"><div class="DiscussionListItem"><a class="Slidable-underneath Slidable-underneath--left Slidable-underneath--elastic"><i class="icon fa fa-fw fa-check "></i></a><div class="DiscussionListItem-content Slidable-content unread"><a href="/user/weazy" class="DiscussionListItem-author" title="" data-original-title="weazy started 13 minutes ago">'+avatar_text+'<ul class="DiscussionListItem-badges badges"></ul></a><a href="/post/'+post.id+'" class="DiscussionListItem-main"><span class="DiscussionListItem-title">'+post.title+'</span><ul class="DiscussionListItem-info"><li class="item-tags"><span class="TagsLabel "><span class="TagLabel"><span class="TagLabel-text">大神经验分享</span></span></span></li>&nbsp;•&nbsp;<li class="item-terminalPost"><span><span class="username">'+post.author_username+'</span></span></li>'+last_reply_text+'</ul></a><span class="DiscussionListItem-count" title="设为已读">'+post.reply_num+'</span></div></div></li>';
+          var post_text = '<li data-id="'+post.id+'"><div class="DiscussionListItem"><a class="Slidable-underneath Slidable-underneath--left Slidable-underneath--elastic"><i class="icon fa fa-fw fa-check "></i></a><div class="DiscussionListItem-content Slidable-content unread"><a href="/user/weazy" class="DiscussionListItem-author" title="" data-original-title="weazy started 13 minutes ago">'+avatar_text+'<ul class="DiscussionListItem-badges badges"></ul></a><a href="/post/'+post.id+'" class="DiscussionListItem-main"><span class="DiscussionListItem-title">'+post.title+'</span><ul class="DiscussionListItem-info"><li class="item-tags"><span class="TagsLabel "><span class="TagLabel"><span class="TagLabel-text">'+post.board+'</span></span></span></li>&nbsp;•&nbsp;<li class="item-terminalPost"><span><span class="username">'+post.author_username+'</span></span></li>'+last_reply_text+'</ul></a><span class="DiscussionListItem-count" title="设为已读">'+post.reply_num+'</span></div></div></li>';
 
           all_posts_text += post_text;
         }
@@ -303,7 +303,7 @@ $(document).ready(function() {
         showPosts(data);
     });
 
-    $(document).on('click', '.DiscussionComposer-changeTags', function() {
+    $(document).on('click', '.board .DiscussionComposer-changeTags', function() {
       $.getJSON('/api/get/tags', function(data) {
 
         var pre_order = 1;
@@ -343,6 +343,8 @@ $(document).ready(function() {
     $(document).on('click', '.item-submit', function() {
         var title = $('.item-discussionTitle input').val();
         var content = $('.ComposerBody-editor .Composer-flexible').html();
+        var board = $('.board .TagLabel:eq(1) .TagLabel-text').text();
+
         $.ajax({
             type: "POST",
             contentType: "application/json; charset=utf-8",
@@ -351,6 +353,7 @@ $(document).ready(function() {
             data: JSON.stringify({
                 title: title,
                 content: content,
+                board: board,
             }),
             success: function(msg) {
                 if (msg.success == 0) {
@@ -386,7 +389,7 @@ $(document).ready(function() {
 
     $(document).on('click', '.TagDiscussionModal-form-submit', function() {
       var tagHtml = '<span class="TagsLabel "><span class="TagLabel  colored" style="color: rgb(239, 86, 79); background-color: rgb(239, 86, 79);"><span class="TagLabel-text">版块</span></span>'+$('.TagsInput-selected .TagsInput-tag').html()+'</span>';
-      $('.DiscussionComposer-changeTags').html(tagHtml);
+      $('.board .DiscussionComposer-changeTags').html(tagHtml);
       $('.modal').modal('hide');
     });
 
