--- a/static/css/main.css
+++ b/static/css/main.css
@@ -121,3 +121,9 @@ h2 {
     margin-top: 10px;
     display: block;
 }
+.ReplyPlaceholder {
+    margin-top: 20px;
+}
+.DiscussionList-loadMore {
+    margin-top: 20px;
+}
