--- a/templates/post.html
+++ b/templates/post.html
@@ -79,8 +79,8 @@
                       <span class="TagsLabel ">
                         <a class="TagLabel  colored" title="" href="/t/fix" style="color: rgb(155, 193, 102); background-color: rgb(155, 193, 102);">
                           <span class="TagLabel-text">车型</span>
-                        </a><a class="TagLabel" title="锁帖" href="/t/closed">
-                          <span class="TagLabel-text">君越16款</span>
+                        </a><a class="TagLabel" title="{{post.models}}" href="/tag/{{post.models}}">
+                          <span class="TagLabel-text">{{post.models}}</span>
                         </a>
                       </span>
                       <span class="TagsLabel ">
@@ -104,7 +104,7 @@
                                 {%if post.author_avatar%}
                                 <img class="Avatar PostUser-avatar" src="{{post.author_avatar}}">
                                 {%else%}
-                                <span class="Avatar PostUser-avatar" style="background: rgb(208, 160, 229);">{{post.author_username|format_username}}</span>
+                                <span class="Avatar PostUser-avatar" style="background: {{post.author_color}};">{{post.author_username|format_username}}</span>
                                 {%endif%}
                                 <span class="username">{{post.author_username}}</span>
                               </a>
@@ -211,6 +211,7 @@
                 </article>
                 <div class="Post-quoteButtonContainer"></div>
               </div>
+              {%if 0%}
               <div class="PostStream-item" data-index="0" data-time="2015-10-16T11:25:18.000Z" data-number="2" data-id="382" style="display: block;">
                 <article class="Post EventPost DiscussionTaggedPost">
                   <div>
@@ -284,6 +285,7 @@
                   </div>
                 </article>
               </div>
+              {%endif%}
               <div class="ReplyList"></div>
               <div class="DiscussionList-loadMore" data-pages="" data-current="" data-next="">
               <button class="Button" type="button" title="">
@@ -293,9 +295,11 @@
               <div class="PostStream-item">
                 <article class="Post ReplyPlaceholder {%if not user_info%}logIn{%endif%}">
                   <header class="Post-header">
-                    <span class="Avatar PostUser-avatar" {%if user_info%}style="background: rgb(160, 176, 229);" {%endif%}>
-                      {%if user_info%}{{user_info.username|format_username}}{%endif%}
-                    </span>
+                    {%if user_info.avatar%}
+                                <img class="Avatar PostUser-avatar" src="{{user_info.avatar}}">
+                                {%else%}
+                                <span class="Avatar PostUser-avatar" style="background: {{user_info.color}};">{{user_info.username|format_username}}</span>
+                                {%endif%}
                     回复一发...
                   </header>
                 </article>
@@ -331,9 +335,11 @@
           </ul>
           <div class="Composer-content">
             <div class="ComposerBody ">
-              <span class="Avatar ComposerBody-avatar" {%if user_info%}style="background: rgb(160, 176, 229);" {%endif%}>
-                {%if user_info%}{{user_info.username|format_username}}{%endif%}
-              </span>
+              {%if user_info.avatar%}
+                                <img class="Avatar ComposerBody-avatar" src="{{user_info.avatar}}">
+                                {%else%}
+                                <span class="Avatar ComposerBody-avatar" style="background: {{user_info.color}};">{{user_info.username|format_username}}</span>
+                                {%endif%}
               <div class="ComposerBody-content">
                 <ul class="ComposerBody-header">
                   <li class="item-title">
@@ -422,7 +428,7 @@ function showReplys(data) {
                         if (reply.author_avatar) {
                             avatar_text = '<img class="Avatar PostUser-avatar" src="' + reply.author_avatar + '">';
                         } else {
-                            avatar_text = '<span class="Avatar PostUser-avatar" style="background: rgb(208, 160, 229); text-transform: capitalize;">' + reply.author_username.substring(0, 1) + '</span>';
+                            avatar_text = '<span class="Avatar PostUser-avatar" style="background: '+reply.author_color+'; text-transform: capitalize;">' + reply.author_username.substring(0, 1) + '</span>';
                         }
                         var like_users_text = '';
                         if (reply.like_users) {
@@ -612,15 +618,32 @@ $(document).ready(function() {
             }),
             success: function(msg) {
                 if (msg.success == 1) {
+                  console.log(msg);
                     $('.ComposerBody-loading').removeClass('active');
                     $('.Composer-flexible').val("");
                     $('.Composer').removeClass('normal');
                     $('.Composer').removeClass('active');
                     $('.Composer').removeClass('visible');
                     $('.Composer').css("display", "none");
+                    var reply = msg.reply_info;
+                     var avatar_text;
+                        if (reply.author_avatar) {
+                            avatar_text = '<img class="Avatar PostUser-avatar" src="' + reply.author_avatar + '">';
+                        } else {
+                            avatar_text = '<span class="Avatar PostUser-avatar" style="background: '+reply.author_color+'; text-transform: capitalize;">' + reply.author_username.substring(0, 1) + '</span>';
+                        }
+                        var like_users_text = '';
+                        var reply_users_text = '';
 
-                    var reply_text = '<div class="PostStream-item" data-index="0" data-time="2016-04-27T00:34:10.000Z" data-number="1" data-id="23077" data-type="comment" style="display: block;"><article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/{{user_info.username}}">{%if post.author_avatar%}<img class="Avatar PostUser-avatar" src="{{user_info.avatar}}">{%else%}<span class="Avatar PostUser-avatar" style="background: rgb(208, 160, 229);">{{user_info.username|format_username}}</span>{%endif%}<span class="username">{{user_info.username}}</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="2016-03-29T17:53:03+08:00" title="Tuesday, March 29, 2016 5:53 PM" data-humantime="true">29 Mar</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">Post #6</span> <span class="PostMeta-time"><time pubdate="true" datetime="2016-03-29T17:53:03+08:00">Tuesday, March 29, 2016 5:53 PM</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div><span class="item-index">#0</span></li></ul></header><div class="Post-body">' + content + '</div><aside class="Post-actions"><ul><li class="item-like"><button class="Button Button--link" type="button" title="赞"><span class="Button-label">赞</span></button></li><li class="item-reply"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right"><li class="item-flag"><button class=" hasIcon" type="button" title="举报"><i class="icon fa fa-fw fa-flag Button-icon"></i><span class="Button-label">举报</span></button></li></ul></div></li></ul></aside><footer class="Post-footer"><ul></ul></footer></div></article><div class="Post-quoteButtonContainer"></div></div>'
-                    $('.ReplyPlaceholder').parent().before(reply_text);
+                        var like_button = '<li class="item-like {%if not user_info%}logIn{%endif%}"><button class="Button Button--link" type="button" title="赞"><span class="Button-label">赞</span></button></li>';
+                      
+
+                        var Dropdown_menu = '<li class="item-edit"><button class=" hasIcon" type="button" title="编辑"><i class="icon fa fa-fw fa-pencil Button-icon"></i><span class="Button-label">编辑</span></button></li><li class="Dropdown-separator"></li><li class="item-hide"><button class=" hasIcon" type="button" title="删除"><i class="icon fa fa-fw fa-trash-o Button-icon"></i><span class="Button-label">删除</span></button></li>';
+
+                        var created = new timeago(null, 'zh_CN').format(reply.created);
+                        var reply_text = '<div class="PostStream-item" data-index="' + '0' + '" data-time="' + reply.created + '" data-number="' + '0' + '" data-id="' + reply.id + '" data-type="comment" style="display: block;"><article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/' + reply.author_username + '">' + avatar_text + '<span class="username">' + reply.author_username + '</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="' + reply.created + '" title="' + reply.created + '" data-humantime="true">' + created + '</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">#' + '0' + ' 楼</span> <span class="PostMeta-time"><time pubdate="true" datetime="' + reply.created + '">' + reply.created + '</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div><span class="item-index">#' + '0' + '</span></li></ul></header><div class="Post-body">' + reply.content + '</div><aside class="Post-actions"><ul>' + like_button + '<li class="item-reply {%if not user_info%}logIn{%endif%}"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right">' + Dropdown_menu + '</ul></aside><footer class="Post-footer"><ul>' + like_users_text + reply_users_text + '</ul></footer></div></article><div class="Post-quoteButtonContainer"></div></div>';
+
+                    $('.DiscussionList-loadMore').before(reply_text);
                     if (data_type == 'to_reply') {
                         var data_index = $("[data-id='" + data_id + "']").attr("data-index");
                         $("[data-id='" + data_id + "']").find('footer ul').append('<li class="item-replies"><div class="Post-mentionedBy"><span class="Post-mentionedBy-summary"><i class="icon fa fa-fw fa-reply "></i><a href="/post/{{post.id}}?reply=' + data_index + '" data-number="' + data_index + '"><span class="username">你</span></a> 回复了它.</span><ul class="Dropdown-menu Post-mentionedBy-preview fade"></ul></div></li>');
