--- a/templates/layout.html
+++ b/templates/layout.html
@@ -68,7 +68,7 @@
                   <button class="Dropdown-toggle Button Button--flat {%if not user_info%}logIn{%endif%}" data-toggle="dropdown" title="消息"> <i class="icon fa fa-fw fa-bell Button-icon"></i>
                     <span class="Button-label">消息</span>
                   </button>
-                  <div class="Dropdown-menu Dropdown-menu--right"></div>
+                  <div class="Dropdown-menu Dropdown-menu--right"><div class="NotificationList"><div class="NotificationList-header"><div class="App-primaryControl"><button class="Button Button--icon Button--link hasIcon" title="全部标记为已读" type="button"><i class="icon fa fa-fw fa-check Button-icon"></i></button></div><h4 class="App-titleControl App-titleControl--text">通知</h4></div><div class="NotificationList-empty">暂无通知</div></div></div>
                 </div>
               </li>
               {%if user_info%}
