--- a/templates/index.html
+++ b/templates/index.html
@@ -36,84 +36,13 @@
                     </a>
                   </li>
                   <li class="Dropdown-separator"></li>
-                  <li class="item-tag20">
-                    <a class="TagLinkButton hasIcon " href="/t/post-tests-here" style="" title="Test out Flarum in this tag. Discussions in this tag will be deleted every so often.">
-                      <span class="icon TagIcon Button-icon" style="background-color: rgb(181, 158, 140);"></span>
-                      Post tests here
-                    </a>
-                  </li>
-                  <li class="item-tag24">
-                    <a class="TagLinkButton hasIcon " href="/t/support" style="" title="Get help setting up, using, and customising Flarum.">
-                      <span class="icon TagIcon Button-icon" style="background-color: rgb(75, 147, 209);"></span>
-                      Support
-                    </a>
-                  </li>
-                  <li class="item-tag69">
-                    <a class="TagLinkButton hasIcon " href="/t/feedback" style="" title="For discussing Flarum core features and design. For issues use Support.">
-                      <span class="icon TagIcon Button-icon" style="background-color: rgb(147, 84, 202);"></span>
-                      Feedback
-                    </a>
-                  </li>
-                  <li class="item-tag48">
-                    <a class="TagLinkButton hasIcon " href="/t/extensions" style="" title="Announce your extensions and provide help to users in this area. For requests/ideas, post in Feedback. For help building extensions, post in Dev >
-                      Extensibility.">
-                      <span class="icon TagIcon Button-icon" style="background-color: rgb(72, 191, 131);"></span>
-                      Extensions
-                    </a>
-                  </li>
-                  <li class="item-tag4">
-                    <a class="TagLinkButton hasIcon " href="/t/dev" style="" title="For developers. Get help hacking core, building extensions, themes, and translations.">
-                      <span class="icon TagIcon Button-icon" style="background-color: rgb(65, 65, 65);"></span>
-                      Dev
-                    </a>
-                  </li>
-                  <li class="item-tag16">
-                    <a class="TagLinkButton hasIcon " href="/t/meta" style="" title="Discussion about this community: its organisation and how we can improve it.">
-                      <span class="icon TagIcon Button-icon" style="background-color: rgb(239, 86, 79);"></span>
-                      Meta
-                    </a>
-                  </li>
-                  <li class="item-tag52">
-                    <a class="TagLinkButton hasIcon " href="/t/resources" style="" title="Share Flarum-related resources and services here: hosting, jobs, etc.">
-                      <span class="icon TagIcon Button-icon" style="background-color: rgb(98, 108, 120);"></span>
-                      Resources
-                    </a>
-                  </li>
-                  <li class="item-tag1">
-                    <a class="TagLinkButton hasIcon " href="/t/off-topic" style="" title="Off-topic discussions that don't fit into any other categories.">
-                      <span class="icon TagIcon Button-icon" style="background-color: rgb(214, 139, 79);"></span>
-                      Off-topic
-                    </a>
-                  </li>
-                  <li class="item-tag60">
-                    <a class="TagLinkButton hasIcon " href="/t/solved" style="" title="Solved issues.">
-                      <span class="icon TagIcon Button-icon" style="background-color: rgb(109, 187, 62);"></span>
-                      Solved
-                    </a>
-                  </li>
-                  <li class="item-tag19">
-                    <a class="TagLinkButton hasIcon " href="/t/performance" style="" title="">
-                      <span class="icon TagIcon Button-icon"></span>
-                      Performance
-                    </a>
-                  </li>
-                  <li class="item-tag57">
-                    <a class="TagLinkButton hasIcon " href="/t/integrations" style="" title="Extensions for other software, like browsers or wordpress.">
-                      <span class="icon TagIcon Button-icon"></span>
-                      Integrations
-                    </a>
-                  </li>
-                  <li class="item-moreTags">
-                    <a href="/tags" active="false" class="" type="button" title="More...">
-                      <span class="Button-label">More...</span>
-                    </a>
-                  </li>
                 </ul>
               </div>
             </li>
           </ul>
         </nav>
         <div class="IndexPage-results sideNavOffset">
+        <header class="Hero TagHero TagHero--colored" style="color: rgb(255, 255, 255); background-color: rgb(72, 191, 131);"><div class="containerNarrow"><h2 class="Hero-title">Support</h2><div class="Hero-subtitle">Get help setting up, using, and customising Flarum.</div></div></header>
           <div class="IndexPage-toolbar">
             <ul class="IndexPage-toolbar-view">
               <li class="item-sort">
