--- a/templates/post.html
+++ b/templates/post.html
@@ -110,18 +110,18 @@
                   <div>
                     <div class="Post-tags">
                       <span class="TagsLabel ">
-                        <a class="TagLabel  colored" title="基于 Flarum 轻论坛的中文增强发行版，集成了一些比较实用的插件，使其更符合国内场景" href="/t/flarumone" style="color: rgb(239, 86, 79); background-color: rgb(239, 86, 79);">
+                        <a class="TagLabel  " title="基于 Flarum 轻论坛的中文增强发行版，集成了一些比较实用的插件，使其更符合国内场景" href="/t/flarumone" >
                           <span class="TagLabel-text">版块</span>
                         </a>
-                        <a class="TagLabel" title="" href="/tag/{{post.board}}">
+                        <a class="TagLabel colored" title="" href="/tag/{{post.board}}" style="color: rgb(239, 86, 79); background-color: rgb(72, 191, 131);">
                           <span class="TagLabel-text">{{post.board}}</span>
                         </a>
                       </span>
                       <span class="TagsLabel ">
-                        <a class="TagLabel  colored" title="" href="/t/fix" style="color: rgb(155, 193, 102); background-color: rgb(155, 193, 102);">
+                        <a class="TagLabel  " title="" href="/t/fix" >
                           <span class="TagLabel-text">车型</span>
                         </a>
-                        <a class="TagLabel" title="{{post.models}}" href="/tag/{{post.models}}">
+                        <a class="TagLabel colored" title="{{post.models}}" href="/tag/{{post.models}}" style="color: rgb(155, 193, 102); background-color: rgb(155, 193, 102);">
                           <span class="TagLabel-text">{{post.models}}</span>
                         </a>
                       </span>
